--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
   <script type="importmap">
 {
   "imports": {
-    "react/": "https://aistudiocdn.com/react@^19.2.0/",
-    "react": "https://aistudiocdn.com/react@^19.2.0",
+    "react": "https://esm.sh/react@18.2.0",
+    "react-dom/client": "https://esm.sh/react-dom@18.2.0/client",
+    "react-router-dom": "https://esm.sh/react-router-dom@6.22.3",
+    "lucide-react": "https://esm.sh/lucide-react@0.363.0",
+    "@google/genai": "https://esm.run/@google/generative-ai",
+    "axios": "https://esm.sh/axios@1.6.8",
     "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/",
-    "lucide-react": "https://aistudiocdn.com/lucide-react@^0.553.0",
-    "@google/genai": "https://aistudiocdn.com/@google/genai@^1.29.0",
-    "axios": "https://aistudiocdn.com/axios@^1.7.2",
-    "react-router-dom": "https://aistudiocdn.com/react-router-dom@^6.25.1",
-    "react-router": "https://aistudiocdn.com/react-router@^6.25.1"
+    "react/": "https://aistudiocdn.com/react@^19.2.0/"
   }
 }
 </script>
