--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     "react-dom/client": "https://esm.sh/react-dom@18.2.0/client",
     "react-router-dom": "https://esm.sh/react-router-dom@6.22.3",
     "lucide-react": "https://esm.sh/lucide-react@0.363.0",
-    "@google/genai": "https://esm.run/@google/generative-ai",
+    "@google/genai": "https://esm.sh/@google/generative-ai",
     "axios": "https://esm.sh/axios@1.6.8",
     "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/",
     "react/": "https://aistudiocdn.com/react@^19.2.0/"
